--- a/nanoparser-regex/pom.xml
+++ b/nanoparser-regex/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.gridkit.nanoparser</groupId>
     <artifactId>nanoparser-parent</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
