--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
   <groupId>org.gridkit.nanoparser</groupId>
   <artifactId>nanoparser-parent</artifactId>
-  <version>0.1-SNAPSHOT</version>
+  <version>0.1</version>
   <name>${project.groupId}::${project.artifactId}</name>
   <description>Nanoparser - parent pom</description>
   <packaging>pom</packaging>
@@ -59,6 +59,7 @@
     <connection>scm:git:https://github.com/aragozin/nanoparser.git</connection>
     <developerConnection>scm:git:https://github.com/aragozin/nanoparser.git</developerConnection>
     <url>https://github.com/aragozin/nanoparser</url>
+    <tag>nanoparser-parent-0.1</tag>
   </scm>
 
   <build>
@@ -140,16 +141,7 @@
                 <goals><goal>run</goal></goals>
                 <configuration> 
                   <target> 
-                    <fixcrlf 
-                        srcdir="." 
-                        includes="src/**/*.java pom.xml"
-                        encoding="UTF8"                     
-                        eol="lf" 
-                        tab="remove"
-                        tablength="4"
-                        eof="remove"
-                        fixlast="true"
-                    />
+                    <fixcrlf srcdir="." includes="src/**/*.java pom.xml" encoding="UTF8" eol="lf" tab="remove" tablength="4" eof="remove" fixlast="true" />
                   </target> 
                 </configuration>                         
               </execution>                     
