--- a/nanoparser/pom.xml
+++ b/nanoparser/pom.xml
@@ -23,7 +23,7 @@
     <parent>
       <groupId>org.gridkit.nanoparser</groupId>
       <artifactId>nanoparser-parent</artifactId>
-      <version>0.1</version>
+      <version>0.2-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
     </parent>
 
